add header block elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,9 @@
         <title>My first webpage!</title>
     </head>
     <body>
-      <p>Hey, guys!</p>
+      <h1>My first webpage ever!</h1>
+      <h2>Written down with some help from Moringa school</h2>
+        <p>Hey, guys!</p>
       <p>Welcome to my first webpage!</p>  
      </body>   
 </html>
