add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,6 +7,12 @@
       <h1>My first webpage ever!</h1>
       <h2>Written down with some help from Moringa school</h2>
         <p>Hey, guys!</p>
-      <p>Welcome to my first webpage!</p>  
+      <p>Welcome to my first webpage!</p>
+      <p>Here are some things am supposed to learn soon:</p>
+      <ul>
+          <li>HTML</li>
+          <li>Css</li>
+          <li>Javascript</li>
+      </ul>  
      </body>   
 </html>
