--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,14 +5,16 @@
     </head>
     <body>
       <h1>My first webpage ever!</h1>
-      <h2>Written down with some help from Moringa school</h2>
+      <h2>Written down with some help from <em>Moringa school</em></h2>
         <p>Hey, guys!</p>
-      <p>Welcome to my first webpage!</p>
+      <p>Welcome to my<strong> first webpage</strong>! </p>
       <p>Here are some things am supposed to learn soon:</p>
       <ul>
           <li>HTML</li>
           <li>Css</li>
           <li>Javascript</li>
-      </ul>  
-     </body>   
+      </ul> 
+      <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+      <img src="images/lion pic." alt="A photo of a lion">
+    </body>   
 </html>
